# C-HTTP

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  build.sh  main.c  project.yml  readme.md
.github/workflows/: validations.yml
HTTP_status/: HTTP_status.c  HTTP_status.h
Hashmap/: Hashamp.c
Network/: Server.c  Server.h  test.c
Routing/: Routing.c  Routing.h  RoutingTree.c
inc/: hashmap.h  http_status.h  routing.h  server.h
src/: hashmap.c  http_status.c  main.c  routing.c  server.c
test/: test_http.c  test_routing.c
